# cppmoji

./: CMakeLists.txt  README.md  cppmoji.cpp  cppmoji.h  example.cpp  json.hpp
